--- a/css/calendar.css
+++ b/css/calendar.css
@@ -1,9 +1,13 @@
-html,
-body {
+html, body {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
+}
+
+h3, h4 {
+  text-align: center;
 }
 
 .calender-container {
@@ -14,24 +18,33 @@ body {
   align-content: flex-start;
   align-items: center;
   min-width: 600px;
+  border: 1px solid;
+  border-bottom: none;
 }
 
 .days[data-day-text] {
   height: 40px;
+  font-size: 16px;
+  text-align: center;
+  line-height: 40px;
 }
+
 .days {
   flex: 13.28%;
   height: 100px;
-  text-align: left;
-  /* border: 1px solid; */
   cursor: pointer;
   position: relative;
-  border-top: 1px solid;
+  border-bottom: 1px solid;
   border-right: 1px solid;
+  text-align: right;
+  font-size: 25px;
+}
+
+.days:hover {
+  background-color: #94bff36e;
 }
 
 .days:empty {
-  border: none;
   cursor: default;
   pointer-events: none;
 }
@@ -55,26 +68,45 @@ body {
   width: 500px;
   height: 200px;
   background-color: #ffffff;
+  text-align: center;
 }
 
 .details {
   width: calc(100% - 50px);
   padding: 10px;
+  resize: none;
 }
 
 button {
   bottom: 0;
   position: absolute;
   cursor: pointer;
+  color: #ffffff;
+  border-radius: 2px;
+  margin: 0;
+  padding: 0 10px;
+  background-color: #4696e7;
+  border: 1px solid #4696e7;
 }
-.save,
-.close {
+
+.save, .close, .ok {
   position: relative;
+  padding: 10px;
+  top: 40px;
 }
+
 .edit {
   left: 0;
 }
 
 .del {
   right: 0;
+}
+
+.days:nth-child(7n) {
+  border-right: none;
+}
+
+.days[data-filled="true"] {
+  background-color: #94bff3;
 }
